# photo-sharing

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  index.html  main.py  manage.py  nginx.conf  pyproject.toml  requirements-development.txt  requirements.txt
.github/workflows/: deploy.yaml
src/configs/: runtime_config.py
src/logic/: logic.py
src/repository/: foto_repository.py
src/repository/adapters/: queue_adapter.py
src/services/: router.py
